crates/toml/tests/snapshots/invalid/integer/us-after-bin.stderr
TOML parse error at line 1, column 16
  |
1 | us-after-bin = 0b_1
  |                ^
`_` may only go between digits, expected nothing

---
TOML parse error at line 1, column 18
  |
1 | us-after-bin = 0b_1
  |                  ^
`_` may only go between digits
